--- a/index.html
+++ b/index.html
@@ -5,32 +5,48 @@
   <title>Willy Jiang</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/551e2718a8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <img class="meImg" src="Profile.jpg" alt="Picture of me">
-  <h1>About Me</h1>
-  <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. Placeholder for more
-    information.</p>
-  <h1>Projects</h1>
-  <ul>
-    <li>
-      <h3>Stuck in the Desert</h3>
-      <p>Built a top-down puzzle game in OCaml based on <a href="https://bonevolt.itch.io/stuck-in-the-sewers">Stuck in
-          the Sewers</a> in which the player navigates through pipes and collects coins throughout various levels.
-        Created a final boss that follows the player while they try to
-        escape.
-    </li>
-    <li>
-      <h3>Stuck in the Desert</h3>
-      <p>Built a top-down puzzle game in OCaml based on “Stuck in the Sewers,” in which the player navigates through
-        pipes
-        and collects coins throughout various levels. Created a final boss that follows the player while they try to
-        escape.
-    </li>
-    </p>
-
+  <ul id="navbar">
+    <li><a href="">Home</a></li>
+    <li><a href="">About Me</a></li>
+    <li><a href="">Projects</a></li>
+    <li><a href="">Contact</a></li>
   </ul>
+  <div class="body">
+    <h1 class="title">Willy Jiang</h1>
+    <img class="meImg" src="assets/Profile.jpg" alt="Picture of me">
+    <div class="aboutMe">
+      <h2>About Me</h2>
+      <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. Placeholder for more
+        information.</p>
+
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <h3>Stuck in the Desert</h3>
+          <p>Built a top-down puzzle game in OCaml based on <a id="SSIS"
+              href="https://bonevolt.itch.io/stuck-in-the-sewers">Stuck
+              in the Sewers</a> in which the player navigates through pipes and collects coins throughout various
+            levels.
+            Created a final boss that follows the player while they try to escape.
+        </li>
+        <li>
+          <h3>Stuck in the Desert</h3>
+          <p>Built a top-down puzzle game in OCaml based on “Stuck in the Sewers,” in which the player navigates through
+            pipes
+            and collects coins throughout various levels. Created a final boss that follows the player while they try to
+            escape.
+        </li>
+        </p>
+      </ul>
+      <div class="links">
+        <a href=https://www.linkedin.com/in/willy-jiang /><i class="fab fa-linkedin fa-3x"></i></a>
+        <a href="https://github.com/wjjiang1"><i class="fab fa-github-square fa-3x"></i></a>
+      </div>
+    </div>
 </body>
 
 </html>
