--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 <body>
   <ul id="navbar">
     <li><a href="">Home</a></li>
-    <li><a href="">About Me</a></li>
-    <li><a href="">Projects</a></li>
+    <li><a href="#aboutMe">About Me</a></li>
+    <li><a href="#projects">Projects</a></li>
     <li><a href="">Contact</a></li>
   </ul>
   <div class="body">
     <h1 class="title">Willy Jiang</h1>
     <img class="meImg" src="assets/Profile.jpg" alt="Picture of me">
-    <div class="aboutMe">
+    <div id="aboutMe">
       <h2>About Me</h2>
       <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. Placeholder for more
         information.</p>
-
+    </div>
+    <div id="projects">
       <h2>Projects</h2>
       <ul>
         <li>
@@ -35,18 +36,31 @@
         </li>
         <li>
           <h3>Stuck in the Desert</h3>
-          <p>Built a top-down puzzle game in OCaml based on “Stuck in the Sewers,” in which the player navigates through
+          <p>Built a top-down puzzle game in OCaml based on “Stuck in the Sewers,” in which the player navigates
+            through
             pipes
-            and collects coins throughout various levels. Created a final boss that follows the player while they try to
+            and collects coins throughout various levels. Created a final boss that follows the player while they try
+            to
             escape.
         </li>
         </p>
       </ul>
-      <div class="links">
-        <a href=https://www.linkedin.com/in/willy-jiang /><i class="fab fa-linkedin fa-3x"></i></a>
-        <a href="https://github.com/wjjiang1"><i class="fab fa-github-square fa-3x"></i></a>
-      </div>
     </div>
+    <div class="links">
+      <a href=https://www.linkedin.com/in/willy-jiang>
+        <i class="fab fa-linkedin fa-3x"></i>
+        <h4>LinkedIn</h4>
+      </a>
+      <a href="https://github.com/wjjiang1">
+        <i class="fab fa-github fa-3x"></i>
+        <h4>Github</h4>
+      </a>
+      <a href="https://github.com/wjjiang1">
+        <i class="fas fa-file-word fa-3x"></i>
+        <h4>Resume</h4>
+      </a>
+    </div>
+  </div>
 </body>
 
 </html>
