--- a/index.html
+++ b/index.html
@@ -26,22 +26,16 @@
     <div id="projects">
       <h2>Projects</h2>
       <ul>
-        <li>
-          <h3>Stuck in the Desert</h3>
-          <p>Built a top-down puzzle game in OCaml based on <a id="SSIS"
-              href="https://bonevolt.itch.io/stuck-in-the-sewers">Stuck
-              in the Sewers</a> in which the player navigates through pipes and collects coins throughout various
-            levels.
-            Created a final boss that follows the player while they try to escape.
-        </li>
-        <li>
-          <h3>Stuck in the Desert</h3>
-          <p>Built a top-down puzzle game in OCaml based on “Stuck in the Sewers,” in which the player navigates
-            through
-            pipes
-            and collects coins throughout various levels. Created a final boss that follows the player while they try
-            to
-            escape.
+        <li class="project1">
+          <img id="SSIDpic" src="assets/SSID.PNG" alt="Stuck in the Desert gameplay">
+          <div class="project1-text">
+            <h3>Stuck in the Desert</h3>
+            <p>Built a top-down puzzle game in OCaml based on <a id="SSIS"
+                href="https://bonevolt.itch.io/stuck-in-the-sewers">Stuck
+                in the Sewers</a> in which the player navigates through pipes and collects coins throughout various
+              levels.
+              Created a final boss that follows the player while they try to escape.
+          </div>
         </li>
         </p>
       </ul>
@@ -55,9 +49,13 @@
         <i class="fab fa-github fa-3x"></i>
         <h4>Github</h4>
       </a>
-      <a href="https://github.com/wjjiang1">
+      <a href="assets/Jiang_Resume.pdf">
         <i class="fas fa-file-word fa-3x"></i>
         <h4>Resume</h4>
+      </a>
+      <a href="mailto:wjj26@cornell.edu">
+        <i class="fas fa-envelope-square fa-3x"></i>
+        <h4>Email</h4>
       </a>
     </div>
   </div>
