Polished projects section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <ul id="navbar">
-    <li><a href="">Home</a></li>
+    <li><a href="#">Home</a></li>
     <li><a href="#aboutMe">About Me</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="">Contact</a></li>
@@ -20,7 +20,9 @@
     <img class="meImg" src="assets/Profile.jpg" alt="Picture of me">
     <div id="aboutMe">
       <h2>About Me</h2>
-      <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. Placeholder for more
+      <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. I am passionate about
+        educating future generations in STEM. In my free time, I love playing tennis, chess, and rhythm games.
+        Placeholder for more
         information.</p>
     </div>
     <div id="projects">
