--- a/index.html
+++ b/index.html
@@ -30,13 +30,23 @@
       <ul>
         <li class="project1">
           <img id="SSIDpic" src="assets/SSID.PNG" alt="Stuck in the Desert gameplay">
-          <div class="project1-text">
+          <div class="project-text">
             <h3>Stuck in the Desert</h3>
             <p>Built a top-down puzzle game in OCaml based on <a id="SSIS"
                 href="https://bonevolt.itch.io/stuck-in-the-sewers">Stuck
                 in the Sewers</a> in which the player navigates through pipes and collects coins throughout various
               levels.
               Created a final boss that follows the player while they try to escape.
+          </div>
+        </li>
+        <li class="project2">
+          <img id="LSSpic" src="assets/LSS.PNG" alt="London Sewer System gameplay">
+          <div class="project-text">
+            <h3>London Sewer System</h3>
+            <p>Implemented Dijkstra's algorithm using a modified DFS in Java to locate a ring in a maze given only the
+              current distance to the ring. Developed a recursive algorithm using heaps to collect differently weighted
+              coins while
+              leaving the maze in a limited number of steps.
           </div>
         </li>
         </p>
