--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="#">Home</a></li>
     <li><a href="#aboutMe">About Me</a></li>
     <li><a href="#projects">Projects</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="mailto:wjj26@cornell.edu">Contact</a></li>
   </ul>
   <div class="body">
     <h1 class="title">Willy Jiang</h1>
@@ -22,8 +22,7 @@
       <h2>About Me</h2>
       <p>Hi! I'm Willy, a sophomore at Cornell University majoring in Computer Science and Math. I am passionate about
         educating future generations in STEM. In my free time, I love playing tennis, chess, and rhythm games.
-        Placeholder for more
-        information.</p>
+      </p>
     </div>
     <div id="projects">
       <h2>Projects</h2>
@@ -37,6 +36,7 @@
                 in the Sewers</a> in which the player navigates through pipes and collects coins throughout various
               levels.
               Created a final boss that follows the player while they try to escape.
+            </p>
           </div>
         </li>
         <li class="project2">
@@ -47,6 +47,7 @@
               current distance to the ring. Developed a recursive algorithm using heaps to collect differently weighted
               coins while
               leaving the maze in a limited number of steps.
+            </p>
           </div>
         </li>
         </p>
